[build-system]
requires = ["setuptools >=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bmipy"
description = "Basic Model Interface for Python"
readme = "README.rst"
authors = [
    {name = "Eric Hutton", email = "huttone@colorado.edu"},
]
keywords = ["BMI", "Basic Model Interface"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "black",
    "click",
    "jinja2",
    "numpy",
]
dynamic = ["version"]

  [project.scripts]
  bmipy-render = "bmipy.cmd:main"

  [project.urls]
  Documentation = "https://bmi.readthedocs.io"
  Source = "https://github.com/csdms/bmi-python"

[tool]

  [tool.setuptools.package-data]
  bmipy = ["py.typed"]

  [tool.setuptools.dynamic]
  version = {attr = "bmipy._version.__version__"}

  [tool.pytest.ini_options]
  minversion = "6.0"
  testpaths = ["src", "tests"]
  norecursedirs = [".*", "*.egg*", "build", "dist"]
  addopts = """
    --ignore setup.py
    --tb native
    --durations 16
    --strict-markers
    --doctest-modules
    -vvv
  """
  doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE"
  ]

  [tool.isort]
  combine_as_imports = true
  profile = "black"

  [tool.check-manifest]
  ignore = [".nox", "build"]
