[project]
name = "bmipy"
requires-python = ">=3.10"
description = "Basic Model Interface for Python"
keywords = [
    "BMI",
    "Basic Model Interface",
]
authors = [
    { name = "Eric Hutton", email = "huttone@colorado.edu" },
]
maintainers = [
    { name = "Eric Hutton", email = "huttone@colorado.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "black",
    "jinja2",
    "numpy",
]
dynamic = [
    "version",
    "readme",
]

[project.license]
text = "MIT"

[project.scripts]
bmipy-render = "bmipy.cmd:main"

[project.urls]
Documentation = "https://bmi.readthedocs.io"
Source = "https://github.com/csdms/bmi-python"

[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.readme]
file = "README.rst"
content-type = "text/x-rst"

[tool.setuptools.dynamic.version]
attr = "bmipy._version.__version__"

[tool.setuptools.package-data]
bmipy = [
    "py.typed",
]

[tool.check-manifest]
ignore = [
    ".nox",
    "build",
]

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src",
    "tests",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "build",
    "dist",
]
addopts = [
    "--ignore=setup.py",
    "--tb=native",
    "--durations=16",
    "--strict-markers",
    "--doctest-modules",
    "-vvv",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]
