[metadata]
name = bmipy
description = Basic Model Interface for Python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Eric Hutton
author_email = huttone@colorado.edu
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Physics
url = https://github.com/csdms/bmi-python
download_url = https://pypi.org/project/xmipy/

[options]
packages = find:
python_requires = >=3.7
install_requires =
    black
    click
    jinja2
    numpy

[options.entry_points]
console_scripts =
    bmipy-render = bmipy.cmd:main

[pylint]
disable = line-too-long,bad-continuation

[flake8]
exclude = docs bmipy/_version.py
max-line-length = 88

[versioneer]
VCS = git
style = pep440
versionfile_source = bmipy/_version.py
versionfile_build = bmipy/_version.py
tag_prefix =
parentdir_prefix = bmipy-

[tool:pytest]
minversion = 3.0
testpaths = bmipy tests
norecursedirs = .* *.egg* build dist
addopts =
    --ignore setup.py
    --ignore versioneer.py
    --ignore bmipy/_version.py
    --tb native
    --strict
    --durations 16
    --doctest-modules
doctest_optionflags =
    NORMALIZE_WHITESPACE
    IGNORE_EXCEPTION_DETAIL
    ALLOW_UNICODE

[run]
omit = bmipy/_version.py
